--- a/theme/login.html
+++ b/theme/login.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
-    <title>StudyBuddy - Find study partners around the world!</title>
+    <title>CodePro - Find study partners around the world!</title>
   </head>
   <body>
     <header class="header header--loggedIn">
       <div class="container">
         <a href="/" class="header__logo">
           <img src="assets/logo.svg" />
-          <h1>StudyBuddy</h1>
+          <h1>CodePro</h1>
         </a>
         <form class="header__search">
           <label>
@@ -73,7 +73,7 @@
             <form class="form" action="#">
               <div class="form__group form__group">
                 <label for="room_name">Username</label>
-                <input id="username" name="username" type="text" placeholder="e.g. dennis_ivy" />
+                <input id="username" name="username" type="text" placeholder="e.g. privykurura" />
               </div>
               <div class="form__group">
                 <label for="password">Password</label>
