--- a/theme/settings.html
+++ b/theme/settings.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
-    <title>StudyBuddy - Find study partners around the world!</title>
+    <title>CodePro - Find study partners around the world!</title>
   </head>
   <body>
     <header class="header header--loggedIn">
       <div class="container">
         <a href="/" class="header__logo">
           <img src="assets/logo.svg" />
-          <h1>StudyBuddy</h1>
+          <h1>CodePro</h1>
         </a>
         <form class="header__search">
           <label>
@@ -106,8 +106,8 @@
                   id="fullname"
                   name="fullname"
                   type="text"
-                  placeholder="e.g. Dennis Ivy"
-                  value="Dennis Ivy"
+                  placeholder="e.g. Privy kurura"
+                  value="Priviledge Kurura"
                 />
               </div>
               <div class="form__group">
@@ -116,8 +116,8 @@
                   id="username"
                   name="username"
                   type="text"
-                  placeholder="e.g. @dennis_ivy"
-                  value="@dennis_ivy"
+                  placeholder="e.g. @privykurura"
+                  value="@privykurura"
                 />
               </div>
               <div class="form__group">
