--- a/theme/activity.html
+++ b/theme/activity.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
-    <title>StudyBuddy - Find study partners around the world!</title>
+    <title>CodePro - Find study partners around the world!</title>
   </head>
   <body>
     <header class="header header--loggedIn">
@@ -72,7 +72,7 @@
                     <img src="https://randomuser.me/api/portraits/women/11.jpg" />
                   </div>
                   <p>
-                    @sulamita_ivy
+                    @privy
                     <span>5 days ago</span>
                   </p>
                 </a>
@@ -102,7 +102,7 @@
                     <img src="https://randomuser.me/api/portraits/men/13.jpg" />
                   </div>
                   <p>
-                    @mr_spshuvo
+                    @privy
                     <span>5 days ago</span>
                   </p>
                 </a>
