--- a/theme/profile.html
+++ b/theme/profile.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="style.css" />
-  <title>StudyBuddy - Find study partners around the world!</title>
+  <title>CodePro - Find study partners around the world!</title>
 </head>
 
 <body>
@@ -15,7 +15,7 @@
     <div class="container">
       <a href="/" class="header__logo">
         <img src="assets/logo.svg" />
-        <h1>StudyBuddy</h1>
+        <h1>CodePro</h1>
       </a>
       <form class="header__search">
         <label>
@@ -99,9 +99,7 @@
           <div class="profile__about">
             <h3>About</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur illo tenetur
-              facilis sunt nemo debitis quisquam hic atque aut? Ducimus alias placeat optio
-              accusamus repudiandae quis ab ex exercitationem rem?
+             A Peer app for programmers developed to help programmers to communicate.
             </p>
           </div>
         </div>
@@ -118,7 +116,7 @@
               <div class="avatar avatar--small active">
                 <img src="https://randomuser.me/api/portraits/men/11.jpg" />
               </div>
-              <span>@dennis_ivy</span>
+              <span>@privy</span>
             </a>
             <div class="roomListRoom__actions">
               <span>3 days ago</span>
@@ -128,8 +126,7 @@
           <div class="roomListRoom__content">
             <a href="room.html">100 Days of coding challenge</a>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur ducimus harum
-              dolorem, obcaecati mollitia omnis quasi aut consequuntur enim itaque labore.
+              
             </p>
           </div>
           <div class="roomListRoom__meta">
@@ -160,7 +157,7 @@
               <div class="avatar avatar--small">
                 <img src="https://randomuser.me/api/portraits/women/11.jpg" />
               </div>
-              <span>@sulamita_ivy</span>
+              <span>@pk</span>
             </a>
             <div class="roomListRoom__actions">
               <span>5 days ago</span>
@@ -170,8 +167,7 @@
           <div class="roomListRoom__content">
             <a href="room.html">JavaScript made Simple</a>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur ducimus harum
-              dolorem, obcaecati mollitia omnis quasi aut consequuntur enim itaque labore.
+              
             </p>
           </div>
           <div class="roomListRoom__meta">
@@ -211,7 +207,7 @@
                 <img src="https://randomuser.me/api/portraits/women/11.jpg" />
               </div>
               <p>
-                @sulamita_ivy
+                @privy
                 <span>5 days ago</span>
               </p>
             </a>
@@ -241,7 +237,7 @@
                 <img src="https://randomuser.me/api/portraits/men/13.jpg" />
               </div>
               <p>
-                @mr_spshuvo
+                @privy
                 <span>5 days ago</span>
               </p>
             </a>
